ProdIND/ProdPrograms/force-app/main/default/objects/Security_Setting__mdt/Security_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Metadata contains keys for Encryption and Decryption.</description>
    <label>Security Setting</label>
    <pluralLabel>Security Settings</pluralLabel>
</CustomObject>