ProdIND/ProdPrograms/force-app/main/default/objects/Security_Setting__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client-Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>