ProdIND/ProdPrograms/force-app/main/default/objects/Security_Setting__mdt/fields/IV_Key__c.field-meta.xml
<CustomField>
    <fullName>IV_Key__c</fullName>
    <label>IV Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>