ProdIND/ProdPrograms/force-app/main/default/objects/Security_Setting__mdt/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <label>Private Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>